--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1.33", features = ["full"] }
+async-trait = "0.1"
+futures = "0.3.29"
+libp2p = { features = [ "tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "yamux", "quic", "cbor", "request-response"] }
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+serde = {version = "1.0.27", features = ["derive"] }
+serde_json = "1.0.9"
+syn = "0.12.7"
+url = "1.6.0"
+pretty_env_logger = "0.4"
+ndarray = "*"
+rand = "0.8.5"
+#rust-s3 = "0.33.0"
+lazy_static = "1.4.0"
+anyhow = "1.0"
+once_cell = "1.5"
