--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,15 @@ serde_json = "1.0.9"
 syn = "0.12.7"
 url = "1.6.0"
 pretty_env_logger = "0.4"
+#tensorflow = "0.16.0"
+#tensorflow = "0.17.0"
+#tensorflow = "0.19.1"
+tensorflow = {version = "0.19.1", features = ["tensorflow_gpu"]}
 ndarray = "*"
 rand = "0.8.5"
 #rust-s3 = "0.33.0"
 lazy_static = "1.4.0"
 anyhow = "1.0"
+aws-config = "0.56.1"
+aws-sdk-s3 = "0.34.0"
 once_cell = "1.5"
